[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "auth-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "auth-client"
path = "src/client.rs"

# [dependencies]
#
# [build-dependencies]
# tonic-build = "0.7"

[dependencies]
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tonic = { version = "0.7", features = ["tls", "compression"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.10"
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4" }
# Required for routeguide
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing
tracing = "0.1.16"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
# Required for wellknown types
prost-types = "0.10"
# Hyper example
http = "0.2"
http-body = "0.4.2"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1.0"
warp = "0.3"

tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls-pemfile = "*"
tower-http = { version = "0.3", features = ["add-extension", "util"] }

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost", "compression"] }
